<resources>
    <string name="app_name">Diccionario Yokot´an</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="boton1">boton1</string>
    <string name="siguiente">siguiente</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="yt">TODO</string>
    <string name="tn">TODO</string>
    <string name="diccionario">Diccionario</string>
    <string name="oraciones">Oraciones</string>
    <string name="lecciones">Lecciones</string>
    <string name="menu" />
    <string name="menu2">Menu</string>
    <string name="ere">TODO</string>
</resources>